In this commit: - upgrade to angular 7 - adding starter-example - added check box input

--- a/packages/core/src/variables.scss
+++ b/packages/core/src/variables.scss
@@ -5,6 +5,13 @@
     -moz-box-sizing: border-box;
 }
 
+.fql-bundle-checkbox-input { 
+    cursor: pointer;
+    box-sizing: border-box; 
+    -webkit-box-sizing:border-box; 
+    -moz-box-sizing: border-box;
+}
+
 .fql-bundle-label-required:after { 
     content:" *"; 
     color:red;
