--- a/packages/editor/src/components/grid-style-editor.component.html
+++ b/packages/editor/src/components/grid-style-editor.component.html
@@ -1,6 +1,6 @@
 <label class="fql-field-label fql-header" for="header">{{header}}</label>
 <div class="fql-grid-style-property">
-    <div class="fql-grid-style-hiddenhide">
+    <div class="fql-grid-style-hidden">
         <label class="fql-field-label" for="headerTemplate-gridTemplateColumns">hidden</label>
         <input class="fql-field-input fql-field-input-radio" type="checkbox" id="headerTemplate-gridTemplateColumns" [(ngModel)]="gridStyle.hidden"
             name="headerTemplate-gridTemplateColumns">
