removing unnecessary components

--- a/packages/core/src/components/page-wrapper.component.scss
+++ b/packages/core/src/components/page-wrapper.component.scss
@@ -4,3 +4,11 @@
     width: 100%;
     min-height: 30px;
 }
+
+.fql-page-container {
+    display: table;
+    height: 100%;
+    width: 100%;
+    border: 1px dotted;
+    min-height: 15px;
+}
