--- a/packages/core/src/components/section-wrapper.component.scss
+++ b/packages/core/src/components/section-wrapper.component.scss
@@ -40,5 +40,16 @@
     min-height: 30px;
     -ms-grid-row: 2;
     -ms-grid-column: 1;
+}
 
+.fql-section-container {
+    display: table;
+    height: 100%;
+    width: 100%;
+    border: 1px dotted;
+    min-height: 15px;
+}
+
+.fql-component-container-hidden {
+    background-color: #ffecf2;
 }
