--- a/packages/core/src/components/section-wrapper.component.scss
+++ b/packages/core/src/components/section-wrapper.component.scss
@@ -22,8 +22,8 @@
 
 
 .fql-section-wrapper-edit:hover {
-    border: 1px solid;
-    box-shadow: 3px 3px 3px rgb(200, 200, 200);
+    //border: 1px solid;
+    //box-shadow: 3px 3px 3px rgb(200, 200, 200);
 }
 
 .fql-section-header {
